[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.package]
authors = ["Augentic"]
categories = ["runtime", "wasi", "wasm"]
edition = "2024"
homepage = "https://augentic.io"
keywords = ["runtime", "wasi", "wasm"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/augentic/test"
rust-version = "1.92"
version = "0.1.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
nursery = "warn"
pedantic = "warn"
cargo = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
qwasr-sdk = { version = "0.25.0", registry = "credibil" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tracing = "0.1.44"
tokio = { version = "1.49.0", default-features = false, features = ["io-util", "macros", "rt", "sync", "time"] }

augentic-test = { path = "crates/test" }

[profile.release]
lto = "thin"
opt-level = "s"
strip = "symbols"
